# aoc22

./: .gitignore  README.md  aoc.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day2.py  day4.py  day5.py  day8.py  debug.txt  pyproject.toml
day1/: __init__.py
day12/: __init__.py
day14/: __init__.py
day15/: __init__.py
day2/: __init__.py
day3/: __init__.py
day6/: __init__.py
day7/: __init__.py
day9/: __init__.py
