[project]
name = "aoc22"
version = "0"
description = ""
authors = [
    {name = "Matthew Messinger", email = "mattmess1221@gmail.com"},
]
dependencies = [
    "typer[all]>=0.7.0",
    "numpy>=1.23.5",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project.scripts]
aoc = "aoc:app"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.10.0",
]
